{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 256,
  "lineage": "18c25325-82e1-2cde-d6ea-53988e78e73d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sttf_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05b2ef56227510bd1",
            "domain": "vpc",
            "id": "eipalloc-08e3ac82ea7aa19fa",
            "network_interface": "eni-0049f256f19ac3f66",
            "private_dns": "ip-10-0-1-92.eu-central-1.compute.internal",
            "private_ip": "10.0.1.92",
            "public_dns": "ec2-18-198-115-97.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.198.115.97",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "shared",
              "Name": "sttf-nat-eip",
              "Project": "sttf-hosting"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a88743759c81c37e",
            "arn": "arn:aws:ec2:eu-central-1:700903221803:instance/i-074e44af13d64814f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074e44af13d64814f",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2Staging",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01432beeb186dffcc",
            "private_dns": "ip-10-0-1-82.eu-central-1.compute.internal",
            "private_ip": "10.0.1.82",
            "public_dns": "ec2-3-77-237-55.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.77.237.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c8aa9e701f6df935",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af4ad97fcf80d645",
            "tags": {
              "Environment": "shared",
              "Name": "sttf-bastion",
              "Project": "sttf-hosting"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07f227431ae77e485"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.sttf_public_subnet_1",
            "aws_vpc.sttf_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sttf_api_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a88743759c81c37e",
            "arn": "arn:aws:ec2:eu-central-1:700903221803:instance/i-07e10d974523aafef",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sttf-api-ec2-profile",
            "id": "i-07e10d974523aafef",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2Staging",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cc044f5ed5160786",
            "private_dns": "ip-10-0-20-138.eu-central-1.compute.internal",
            "private_ip": "10.0.20.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c350e70c4f0e414e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-040e1f123cf86345e",
            "tags": {
              "Environment": "production",
              "Name": "sttf-api-prod",
              "Project": "sttf-hosting"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ba51a74c8c23dc9"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.sttf_api_prod_db",
            "aws_db_subnet_group.sttf_db_subnet_group",
            "aws_ecr_repository.sttf_api",
            "aws_iam_instance_profile.sttf_api_profile",
            "aws_iam_role.sttf_api_role",
            "aws_security_group.rds_sg",
            "aws_security_group.sttf_alb_sg",
            "aws_security_group.sttf_api_sg",
            "aws_subnet.sttf_private_subnet_1",
            "aws_subnet.sttf_private_subnet_2",
            "aws_vpc.sttf_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sttf_api_staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a88743759c81c37e",
            "arn": "arn:aws:ec2:eu-central-1:700903221803:instance/i-03be9f6bea9629cde",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sttf-api-ec2-profile",
            "id": "i-03be9f6bea9629cde",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2Staging",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0704d8ba8ce2056df",
            "private_dns": "ip-10-0-10-90.eu-central-1.compute.internal",
            "private_ip": "10.0.10.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-082eeb649780dc702",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba15edf7b957e6c4",
            "tags": {
              "Environment": "staging",
              "Name": "sttf-api-staging",
              "Project": "sttf-hosting"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ba51a74c8c23dc9"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.sttf_api_staging_db",
            "aws_db_subnet_group.sttf_db_subnet_group",
            "aws_ecr_repository.sttf_api",
            "aws_iam_instance_profile.sttf_api_profile",
            "aws_iam_role.sttf_api_role",
            "aws_security_group.rds_sg",
            "aws_security_group.sttf_alb_sg",
            "aws_security_group.sttf_api_sg",
            "aws_subnet.sttf_private_subnet_1",
            "aws_subnet.sttf_private_subnet_2",
            "aws_vpc.sttf_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sttf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:700903221803:internet-gateway/igw-0ef1249ec9dc6f82c",
            "id": "igw-0ef1249ec9dc6f82c",
            "owner_id": "700903221803",
            "tags": {
              "Environment": "shared",
              "Name": "sttf-igw",
              "Project": "sttf-hosting"
            },
            "vpc_id": "vpc-0c0a2f9dbac9d5707"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sttf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "sttf_prod_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:loadbalancer/app/sttf-prod-alb/7445f7505cc28703",
            "arn_suffix": "app/sttf-prod-alb/7445f7505cc28703",
            "dns_name": "sttf-prod-alb-1147555780.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:loadbalancer/app/sttf-prod-alb/7445f7505cc28703",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sttf-prod-alb",
            "security_groups": [
              "sg-03e9a1194f5a377e7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-029f731e84845be84"
              },
              {
                "subnet_id": "subnet-0af4ad97fcf80d645"
              }
            ],
            "subnets": [
              "subnet-029f731e84845be84",
              "subnet-0af4ad97fcf80d645"
            ],
            "tags": {
              "Environment": "production",
              "Name": "sttf-prod-alb",
              "Project": "sttf-hosting"
            },
            "vpc_id": "vpc-0c0a2f9dbac9d5707",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sttf_alb_sg",
            "aws_subnet.sttf_public_subnet_1",
            "aws_subnet.sttf_public_subnet_2",
            "aws_vpc.sttf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "sttf_staging_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:loadbalancer/app/sttf-staging-alb/f0ea137961c556fe",
            "arn_suffix": "app/sttf-staging-alb/f0ea137961c556fe",
            "dns_name": "sttf-staging-alb-283741733.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:loadbalancer/app/sttf-staging-alb/f0ea137961c556fe",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sttf-staging-alb",
            "security_groups": [
              "sg-03e9a1194f5a377e7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-029f731e84845be84"
              },
              {
                "subnet_id": "subnet-0af4ad97fcf80d645"
              }
            ],
            "subnets": [
              "subnet-029f731e84845be84",
              "subnet-0af4ad97fcf80d645"
            ],
            "tags": {
              "Environment": "staging",
              "Name": "sttf-staging-alb",
              "Project": "sttf-hosting"
            },
            "vpc_id": "vpc-0c0a2f9dbac9d5707",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sttf_alb_sg",
            "aws_subnet.sttf_public_subnet_1",
            "aws_subnet.sttf_public_subnet_2",
            "aws_vpc.sttf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sttf_prod_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:listener/app/sttf-prod-alb/7445f7505cc28703/38f28545001d142a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:targetgroup/sttf-prod-tg/275fd4f4be496cb4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:listener/app/sttf-prod-alb/7445f7505cc28703/38f28545001d142a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:loadbalancer/app/sttf-prod-alb/7445f7505cc28703",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.sttf_prod_alb",
            "aws_lb_target_group.sttf_prod_tg",
            "aws_security_group.sttf_alb_sg",
            "aws_subnet.sttf_public_subnet_1",
            "aws_subnet.sttf_public_subnet_2",
            "aws_vpc.sttf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sttf_staging_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:listener/app/sttf-staging-alb/f0ea137961c556fe/e82eec2812601fab",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:targetgroup/sttf-staging-tg/27fed25282059f3a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:listener/app/sttf-staging-alb/f0ea137961c556fe/e82eec2812601fab",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:loadbalancer/app/sttf-staging-alb/f0ea137961c556fe",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.sttf_staging_alb",
            "aws_lb_target_group.sttf_staging_tg",
            "aws_security_group.sttf_alb_sg",
            "aws_subnet.sttf_public_subnet_1",
            "aws_subnet.sttf_public_subnet_2",
            "aws_vpc.sttf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sttf_prod_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:targetgroup/sttf-prod-tg/275fd4f4be496cb4",
            "arn_suffix": "targetgroup/sttf-prod-tg/275fd4f4be496cb4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:targetgroup/sttf-prod-tg/275fd4f4be496cb4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sttf-prod-tg",
            "port": 5000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "sttf-prod-tg",
              "Project": "sttf-hosting"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c0a2f9dbac9d5707"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sttf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sttf_staging_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:targetgroup/sttf-staging-tg/27fed25282059f3a",
            "arn_suffix": "targetgroup/sttf-staging-tg/27fed25282059f3a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:targetgroup/sttf-staging-tg/27fed25282059f3a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sttf-staging-tg",
            "port": 5000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "sttf-staging-tg",
              "Project": "sttf-hosting"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c0a2f9dbac9d5707"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sttf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sttf_prod_tga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:targetgroup/sttf-prod-tg/275fd4f4be496cb4-20250917212921304600000002",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:targetgroup/sttf-prod-tg/275fd4f4be496cb4",
            "target_id": "i-07e10d974523aafef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.sttf_api_prod_db",
            "aws_db_subnet_group.sttf_db_subnet_group",
            "aws_ecr_repository.sttf_api",
            "aws_iam_instance_profile.sttf_api_profile",
            "aws_iam_role.sttf_api_role",
            "aws_instance.sttf_api_prod",
            "aws_lb_target_group.sttf_prod_tg",
            "aws_security_group.rds_sg",
            "aws_security_group.sttf_alb_sg",
            "aws_security_group.sttf_api_sg",
            "aws_subnet.sttf_private_subnet_1",
            "aws_subnet.sttf_private_subnet_2",
            "aws_vpc.sttf_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "sttf_staging_tga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:targetgroup/sttf-staging-tg/27fed25282059f3a-20250917212920605000000001",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:700903221803:targetgroup/sttf-staging-tg/27fed25282059f3a",
            "target_id": "i-03be9f6bea9629cde"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.sttf_api_staging_db",
            "aws_db_subnet_group.sttf_db_subnet_group",
            "aws_ecr_repository.sttf_api",
            "aws_iam_instance_profile.sttf_api_profile",
            "aws_iam_role.sttf_api_role",
            "aws_instance.sttf_api_staging",
            "aws_lb_target_group.sttf_staging_tg",
            "aws_security_group.rds_sg",
            "aws_security_group.sttf_alb_sg",
            "aws_security_group.sttf_api_sg",
            "aws_subnet.sttf_private_subnet_1",
            "aws_subnet.sttf_private_subnet_2",
            "aws_vpc.sttf_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sttf_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e3ac82ea7aa19fa",
            "id": "nat-0ef1be5abbf803508",
            "network_interface_id": "eni-0049f256f19ac3f66",
            "private_ip": "10.0.1.92",
            "public_ip": "18.198.115.97",
            "subnet_id": "subnet-0af4ad97fcf80d645",
            "tags": {
              "Environment": "shared",
              "Name": "sttf-nat-gw",
              "Project": "sttf-hosting"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.sttf_nat_eip",
            "aws_internet_gateway.sttf_igw",
            "aws_subnet.sttf_public_subnet_1",
            "aws_vpc.sttf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sttf_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-062698342469c51dd",
            "owner_id": "700903221803",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ef1be5abbf803508",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "shared",
              "Name": "sttf-private-rt",
              "Project": "sttf-hosting"
            },
            "vpc_id": "vpc-0c0a2f9dbac9d5707"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.sttf_nat_eip",
            "aws_internet_gateway.sttf_igw",
            "aws_nat_gateway.sttf_nat_gw",
            "aws_subnet.sttf_public_subnet_1",
            "aws_vpc.sttf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sttf_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-052818e91b3dec371",
            "owner_id": "700903221803",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ef1249ec9dc6f82c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "shared",
              "Name": "sttf-public-rt",
              "Project": "sttf-hosting"
            },
            "vpc_id": "vpc-0c0a2f9dbac9d5707"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.sttf_igw",
            "aws_vpc.sttf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sttf_private_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e12b717173652427",
            "route_table_id": "rtb-062698342469c51dd",
            "subnet_id": "subnet-0ba15edf7b957e6c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.sttf_nat_eip",
            "aws_internet_gateway.sttf_igw",
            "aws_nat_gateway.sttf_nat_gw",
            "aws_route_table.sttf_private_rt",
            "aws_subnet.sttf_private_subnet_1",
            "aws_subnet.sttf_public_subnet_1",
            "aws_vpc.sttf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sttf_private_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caa18fdce269c808",
            "route_table_id": "rtb-062698342469c51dd",
            "subnet_id": "subnet-040e1f123cf86345e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.sttf_nat_eip",
            "aws_internet_gateway.sttf_igw",
            "aws_nat_gateway.sttf_nat_gw",
            "aws_route_table.sttf_private_rt",
            "aws_subnet.sttf_private_subnet_2",
            "aws_subnet.sttf_public_subnet_1",
            "aws_vpc.sttf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sttf_public_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0717c62669c46d5a9",
            "route_table_id": "rtb-052818e91b3dec371",
            "subnet_id": "subnet-0af4ad97fcf80d645"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.sttf_igw",
            "aws_route_table.sttf_public_rt",
            "aws_subnet.sttf_public_subnet_1",
            "aws_vpc.sttf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sttf_public_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9b209f54bb05022",
            "route_table_id": "rtb-052818e91b3dec371",
            "subnet_id": "subnet-029f731e84845be84"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.sttf_igw",
            "aws_route_table.sttf_public_rt",
            "aws_subnet.sttf_public_subnet_2",
            "aws_vpc.sttf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:700903221803:security-group/sg-07f227431ae77e485",
            "description": "Security group for Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f227431ae77e485",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sttf-bastion-20250917210445527700000001",
            "name_prefix": "sttf-bastion-",
            "owner_id": "700903221803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "shared",
              "Name": "sttf-bastion-sg",
              "Project": "sttf-hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0a2f9dbac9d5707"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sttf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:700903221803:security-group/sg-0e134c9f49c0fe1b0",
            "description": "Security group for RDS PostgreSQL instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e134c9f49c0fe1b0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL access from EC2 instances",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05ba51a74c8c23dc9"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sttf-rds-20250917204614222300000006",
            "name_prefix": "sttf-rds-",
            "owner_id": "700903221803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "shared",
              "Name": "sttf-rds-sg",
              "Project": "sttf-hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0a2f9dbac9d5707"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sttf_alb_sg",
            "aws_security_group.sttf_api_sg",
            "aws_vpc.sttf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sttf_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:700903221803:security-group/sg-03e9a1194f5a377e7",
            "description": "Security group for STTF Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e9a1194f5a377e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sttf-alb-20250917204609947500000004",
            "name_prefix": "sttf-alb-",
            "owner_id": "700903221803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "shared",
              "Name": "sttf-alb-sg",
              "Project": "sttf-hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0a2f9dbac9d5707"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sttf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sttf_api_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:700903221803:security-group/sg-05ba51a74c8c23dc9",
            "description": "Security group for STTF API servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ba51a74c8c23dc9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "API traffic from ALB",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e9a1194f5a377e7"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "sttf-api-20250917204612126900000005",
            "name_prefix": "sttf-api-",
            "owner_id": "700903221803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "shared",
              "Name": "sttf-api-sg",
              "Project": "sttf-hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0a2f9dbac9d5707"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sttf_alb_sg",
            "aws_vpc.sttf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH access from bastion host",
            "from_port": 22,
            "id": "sgrule-3750337864",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05ba51a74c8c23dc9",
            "self": false,
            "source_security_group_id": "sg-07f227431ae77e485",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.sttf_alb_sg",
            "aws_security_group.sttf_api_sg",
            "aws_vpc.sttf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sttf_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:700903221803:subnet/subnet-0ba15edf7b957e6c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0ba15edf7b957e6c4",
            "map_public_ip_on_launch": false,
            "owner_id": "700903221803",
            "tags": {
              "Environment": "shared",
              "Name": "sttf-private-subnet-1",
              "Project": "sttf-hosting",
              "Type": "private"
            },
            "vpc_id": "vpc-0c0a2f9dbac9d5707"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sttf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sttf_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:700903221803:subnet/subnet-040e1f123cf86345e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-040e1f123cf86345e",
            "map_public_ip_on_launch": false,
            "owner_id": "700903221803",
            "tags": {
              "Environment": "shared",
              "Name": "sttf-private-subnet-2",
              "Project": "sttf-hosting",
              "Type": "private"
            },
            "vpc_id": "vpc-0c0a2f9dbac9d5707"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sttf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sttf_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:700903221803:subnet/subnet-0af4ad97fcf80d645",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0af4ad97fcf80d645",
            "map_public_ip_on_launch": true,
            "owner_id": "700903221803",
            "tags": {
              "Environment": "shared",
              "Name": "sttf-public-subnet-1",
              "Project": "sttf-hosting",
              "Type": "public"
            },
            "vpc_id": "vpc-0c0a2f9dbac9d5707"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sttf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sttf_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:700903221803:subnet/subnet-029f731e84845be84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-029f731e84845be84",
            "map_public_ip_on_launch": true,
            "owner_id": "700903221803",
            "tags": {
              "Environment": "shared",
              "Name": "sttf-public-subnet-2",
              "Project": "sttf-hosting",
              "Type": "public"
            },
            "vpc_id": "vpc-0c0a2f9dbac9d5707"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sttf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sttf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:700903221803:vpc/vpc-0c0a2f9dbac9d5707",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0454f8945d6bbfb9a",
            "default_route_table_id": "rtb-02e839868d3ff7334",
            "default_security_group_id": "sg-0018aba3bdd71674b",
            "dhcp_options_id": "dopt-0dce5df058b4f5730",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c0a2f9dbac9d5707",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02e839868d3ff7334",
            "owner_id": "700903221803",
            "tags": {
              "Environment": "shared",
              "Name": "sttf-vpc",
              "Project": "sttf-hosting"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}